--- a/pg_stagings/dbt_project.yml
+++ b/pg_stagings/dbt_project.yml
@@ -32,5 +32,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   pg_stagings:
     # Config indicated by + and applies to all files under models/example/
-    example:
+    models:
       +materialized: view
